# Public-Sector-Data-Demand_Research-Framework-For-Market-Analysis-And-Classification-Research

./: AA BSD Analysis (1).html  AA BSD Analysis (1).ipynb  AA BSD Analysis (2).ipynb  AA BSD Update (1).ipynb  API Call and Full Automatic Data Generation.ipynb  BSD API Call and Full Automatic Data Generation.ipynb  Data Aquisition and Wrangling.ipynb  Modeling.ipynb  README.md  paper.bib  paper.md  pyproject.toml  setup.py
.github/workflows/: build-paper.yml  publish-to-pypi.yml  test.yml
Automated Data and Lead Generators/: API Call and Full Automatic Data Generation.ipynb  Automated Modeling and Lead Generating.ipynb  README.md  Snippets of Model Training and Packaging (Actual Process in Exploratory Notebooks).ipynb  joss-header.tex  paper.bib  paper.md  reqs.txt
Automated Data and Lead Generators/.github/workflows/: build-paper.yml
Automated Data and Lead Generators/Data Buyer Tool Kit Package/: README.md  fetch_and_score.py  preprocess_job.py  requirements.txt
Manual Analyses/: README.md
Market_Report_Single_Data/: CV Results.ipynb  Data Aquisition and Wrangling.ipynb  Final_Public_Data.csv  README.md
data_buyer_toolkit/:  __init__.py  DataBuyerTool Kit Package.py  README.md  Usage Examples (1).ipynb  data_buyer_toolkit.ipynb  nlp_model.joblib  search_and_score.py  toolkit.py
data_demand_mapper/: README.md
data_demand_mapper/examples/: usage_examples.ipynb
