[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_buyer_toolkit"
version = "0.1.0"
description = "Toolkit for identifying third-party data buyers in U.S. federal job postings from USAJobs."
readme = "README.md"
authors = [
  { name = "Rory G. Quinlan" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "nltk",
  "requests",
  "rapidfuzz",
  "joblib"
]

[project.urls]
"Repository" = "https://github.com/RoryQo/Public-Sector-Data-Demand_Research-Framework-For-Market-Analysis-And-Classification"
